--- a/src/SfxWeb/src/app/shared/component/navbar/navbar.component.scss
+++ b/src/SfxWeb/src/app/shared/component/navbar/navbar.component.scss
@@ -82,7 +82,7 @@
     margin-right: 20px;
 }
 
-@media (max-width: 500px) {
+@media (max-height: 500px) {
 
   .actions {
     float: initial;
